test/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - name: service-a
        image: minhthuong0311103/service-a
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        env:
        - name: CONSUL_HTTP_ADDR
          value: "consul:8500"
      - name: consul
        image: consul
        command: ["consul", "agent", "-retry-join", "consul", "-node", "$(POD_NAME)", "-bind", "$(POD_IP)", "-client", "0.0.0.0", "-config-file", "/consul/config/consul-config-a.json"]
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        volumeMounts:
        - name: consul-config
          mountPath: /consul/config
      volumes:
      - name: consul-config
        configMap:
          name: consul-config-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: minhthuong031103/service-b
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        env:
        - name: CONSUL_HTTP_ADDR
          value: "consul:8500"
      - name: consul
        image: consul
        command: ["consul", "agent", "-retry-join", "consul", "-node", "$(POD_NAME)", "-bind", "$(POD_IP)", "-client", "0.0.0.0", "-config-file", "/consul/config/consul-config-b.json"]
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        volumeMounts:
        - name: consul-config
          mountPath: /consul/config
      volumes:
      - name: consul-config
        configMap:
          name: consul-config-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: minhthuong031103/api-gateway
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        env:
        - name: CONSUL_HTTP_ADDR
          value: "consul:8500"
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: service-a
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: service-b
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
