test/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /service-a
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
      - path: /service-b
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
